environment-promotion/envs/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  namespace: staging
  annotations:
    # kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /poc/staging/$1
    # nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - http:
      paths:
      - path: /poc/staging/(.*)
        pathType: Prefix
        backend:
          service:
            name: staging-simple-service
            port:
              number: 8080
